--- a/style.scss
+++ b/style.scss
@@ -1,51 +1,131 @@
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 body {
+  --c-brand: orange;
   background-color: #222;
 }
 
-.accordion {
-  box-shadow: 0 0 0 4px white;
-  margin-bottom: 40px;
-  width: 50%;
+.accordion .collapsible {
+  --transition: all 0.35s ease-in-out;
+  --highlight-color: var(--c-brand);
+
+  .collapsible__inner {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    width: 100%;
+  }
 
   .accordion {
-    width: 100%;
-    margin-bottom: 10px;
-  }
-
-  .collapsible {
-    width: 100%;
-  }
-
-  @media (max-width: 600px) {
-    width: 100%;
+    box-shadow: 0 0 0 1px red;
   }
 }
 
 .collapsible {
-  box-shadow: 0 0 0 1px wheat;
+  --transition: all 0.2s ease-in-out;
+  --chevronC: #222;
+  --chevronW: 9px;
+  --chevronH: 2px;
+  --chevronT: 2px;
+  --chevronRotate: 40deg;
+
   width: 50%;
-  margin-top: 10px;
+
+  &:not(:first-of-type) {
+    margin-top: 10px;
+  }
 
   @media (max-width: 600px) {
     width: 100%;
   }
 
+  &:not(.active),
+  &.transition-in {
+    --chevronRotate: -40deg;
+    --chevronT: -3px;
+  }
+
+  &.transition-out {
+    --chevronRotate: 40deg;
+    --chevronT: 2px;
+  }
+
   &__trigger {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: black;
     font-family: sans-serif;
     text-transform: uppercase;
+    text-align: left;
+    padding: 10px 15px;
+    font-weight: 700;
     width: 100%;
-    height: 60px;
-    font-size: 14px;
-    background-color: blue;
+    line-height: 1.2;
+    font-size: 16px;
+    background-color: var(--c-brand);
+    transition: var(--transition);
+    outline: none !important;
     user-select: none;
     cursor: pointer;
 
     a {
-      color: white;
+      display: block;
+      color: black;
+      transition: all 0.3s ease-in-out;
+
+      &:hover {
+        color: blue;
+      }
+
+      .chevron {
+        position: absolute;
+      }
+    }
+
+    .chevron,
+    + .chevron {
+      display: flex;
+      margin-left: auto;
+      position: relative;
+      height: 20px;
+      width: 25px;
+      padding: 0;
+      background: transparent;
+      box-shadow: none !important;
+      border: none !important;
+      outline: none !important;
+      cursor: pointer;
+
+      &:before,
+      &:after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: calc(50% - var(--chevronW) + var(--chevronH) * 0.5 - 0.5px);
+        width: var(--chevronW);
+        height: var(--chevronH);
+        background-color: var(--chevronC);
+        border-radius: 9999px;
+        transform-origin: right;
+        transform: translateY(var(--chevronT)) rotate(var(--chevronRotate));
+        transition: var(--transition);
+      }
+
+      &:after {
+        transform-origin: left;
+        transform: translateY(var(--chevronT))
+          rotate(calc(var(--chevronRotate) * -1));
+        left: calc(
+          50% - var(--chevronW) + var(--chevronW) - var(--chevronH) * 0.5 +
+            0.5px
+        );
+      }
     }
   }
 
@@ -85,15 +165,34 @@ body {
     }
   }
 
-  &.active {
-    > .collapsible__trigger {
-      background-color: red;
-    }
+  // &.active {
+  //   > .collapsible__trigger {
+  //     background-color: red;
+  //   }
+  // }
+
+  // &.transition {
+  //   > .collapsible__trigger {
+  //     background-color: green;
+  //   }
+  // }
+}
+
+.accordion {
+  box-shadow: 0 0 0 2px white;
+  margin-bottom: 40px;
+  width: 50%;
+
+  .accordion {
+    width: 100%;
+    margin-bottom: 10px;
   }
 
-  &.transition {
-    > .collapsible__trigger {
-      background-color: green;
-    }
+  .collapsible {
+    width: 100%;
+  }
+
+  @media (max-width: 600px) {
+    width: 100%;
   }
 }
