--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,16 @@ body {
   background-color: #222;
 }
 
+// Bare bones
+.collapsible__content {
+  overflow: hidden;
+}
+
+.accordion .collapsible__inner {
+  display: flex;
+}
+//
+
 .accordion .collapsible {
   .collapsible__inner {
     display: flex;
