--- a/style.scss
+++ b/style.scss
@@ -10,18 +10,18 @@ body {
 }
 
 // Bare bones
-.collapsible__content {
+.collapsible .collapsible__content {
   overflow: hidden;
 }
 
-.accordion .collapsible__inner {
+.collapsible .collapsible__inner {
   display: flex;
 }
+
 //
 
 .accordion .collapsible {
   .collapsible__inner {
-    display: flex;
     justify-content: center;
     padding: 20px;
     width: 100%;
@@ -146,7 +146,6 @@ body {
   &__content {
     width: 100%;
     background-color: white;
-    overflow: hidden;
   }
 
   &__inner {
